# stack-hs

./: LICENSE  README.md  StackMonad.cabal
spec/: StackSpec.hs
src/Data/: Stack.hs
src/Data/Function/: Combinators.hs
